completed the fixed position navbars in b3 views, added spacing in vetting worksheet view

--- a/public/stylesheets/b3style.css
+++ b/public/stylesheets/b3style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .fixed {
-    position: absolute;
+    position: fixed;
 }
 
 p.scriptText {
